# conkits

./: LICENSE  README.md  pyproject.toml
conkits/: __init__.py  __main__.py  ansi.py  conio.py
conkits/ansi256colors/: __init__.py  ansi256colors.py  ansi256colorscodes.py
conkits/help/: __init__.py  anim.py  predefinedcolors.py  usage.py
conkits/printtools/: __init__.py  ansistring.py  basicprinttool.py  dynamicprint.py
